--- a/application.yml
+++ b/application.yml
@@ -23,5 +23,5 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
     hibernate:
-      ddl-auto: create-drop
-    show-sql: true
+      ddl-auto: update
+      show-sql: true
