--- a/application.yml
+++ b/application.yml
@@ -21,8 +21,8 @@ spring:
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/search_engine?useSSL=false&requireSSL=false&allowPublicKeyRetrieval=true
-    username: root
-    password: shepardcmndr1992
+    username: 
+    password: 
   jpa:
     properties:
       hibernate:
